pipoca/y.output
   0  $accept : pipoca $end

   1  pipoca : file

   2  file :
   3       | file decl

   4  decl : init
   5       | extern
   6       | func
   7       | NEWLINE

   8  init : INIT ID OPATR init2 NEWLINE

   9  init2 : '[' init3 ']'

  10  init3 : intorreal
  11        | '-' intorreal
  12        | init3 ',' intorreal
  13        | init3 ',' '-' intorreal

  14  extern : EXTERN extern2 NEWLINE

  15  extern2 : ID
  16          | extern2 ',' ID

  17  const2 : ID OPATR const
  18         | ID ',' const2 ',' const

  19  const : init2
  20        | STRING
  21        | intorreal

  22  func : REAL ID '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE
  23       | INTEGER ID '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE
  24       | ID '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE

  25  listexp3 :
  26           | exp5
  27           | ID '[' ']'
  28           | listexp4 ',' ID '[' ']'
  29           | listexp4 ',' exp

  30  listexp4 : exp5
  31           | ID '[' ']'
  32           | listexp4 ',' ID '[' ']'
  33           | listexp4 ',' exp

  34  listexp :
  35          | exp5
  36          | listexp2 ',' exp

  37  listexp2 : exp5
  38           | listexp2 ',' exp

  39  func2 : dec
  40        | ints
  41        | exp4
  42        | memreserv
  43        | print
  44        | breakcontinue
  45        | func2 dec
  46        | func2 ints
  47        | func2 exp4
  48        | func2 memreserv
  49        | func2 print
  50        | func2 breakcontinue

  51  breakcontinue : BREAK NEWLINE
  52                | CONTINUE NEWLINE
  53                | BREAK INT NEWLINE
  54                | CONTINUE INT NEWLINE

  55  dec : VAR type var NEWLINE
  56      | CONST const2 NEWLINE

  57  type :
  58       | REAL
  59       | INTEGER

  60  var : ID
  61      | ID '[' ']'
  62      | ID '[' INT ']'
  63      | ID '[' ID ']'
  64      | var ',' ID
  65      | var ',' ID '[' ']'
  66      | var ',' ID '[' INT ']'
  67      | var ',' ID '[' ID ']'

  68  ints : IF exp5 THEN NEWLINE STARTBLOCK func2 ENDBLOCK elseif
  69       | WHILE exp5 DO NEWLINE STARTBLOCK func2 ENDBLOCK elsecycle
  70       | DO NEWLINE STARTBLOCK func2 ENDBLOCK UNTIL exp5 elsecycle

  71  elsecycle : ELSE NEWLINE STARTBLOCK func2 ENDBLOCK endelsecycle
  72            | endelsecycle

  73  elseif : ELSE NEWLINE STARTBLOCK func2 ENDBLOCK endelseif
  74         | endelseif

  75  endelsecycle : DONE NEWLINE

  76  endelseif : ENDIF NEWLINE

  77  exp4 : exp6 NEWLINE

  78  exp5 : exp
  79       | '(' exp5 AND exp ')'
  80       | exp5 AND exp
  81       | '(' exp5 OR exp ')'
  82       | exp5 OR exp

  83  exp6 : exp5
  84       | ID OPATR exp6

  85  exp : exp2
  86      | exp3
  87      | exp '-' exp3
  88      | exp '-' exp2
  89      | exp '+' exp3
  90      | exp '+' exp2
  91      | exp '*' exp3
  92      | exp '*' exp2
  93      | exp '/' exp3
  94      | exp '/' exp2
  95      | exp '%' exp3
  96      | exp '%' exp2
  97      | exp POT exp3
  98      | exp POT exp2
  99      | exp '<' exp3
 100      | exp '<' exp2
 101      | exp '>' exp3
 102      | exp '>' exp2
 103      | exp '=' exp3
 104      | exp '=' exp2
 105      | exp MOREOREQUAL exp3
 106      | exp MOREOREQUAL exp2
 107      | exp LESSOREQUAL exp3
 108      | exp LESSOREQUAL exp2
 109      | exp NOTEQUAL exp3
 110      | exp NOTEQUAL exp2
 111      | ID '[' memreserv2 ']' OPATR exp3
 112      | ID '[' memreserv2 ']' OPATR exp2
 113      | exp '?'

 114  exp2 : '(' exp ')'

 115  exp3 : ID
 116       | '@' ID
 117       | ID '(' listexp ')'
 118       | ID '[' memreserv2 ']'
 119       | PLUSONE ID
 120       | MINUSONE ID
 121       | ID PLUSONE
 122       | ID MINUSONE
 123       | intorreal
 124       | NOT ID
 125       | '-' ID
 126       | '-' intorreal

 127  memreserv : '[' ID ']' '=' memreserv2 NEWLINE

 128  memreserv2 : memreserv4
 129             | memreserv3
 130             | memreserv2 '*' memreserv3
 131             | memreserv2 '*' memreserv4
 132             | memreserv2 '/' memreserv3
 133             | memreserv2 '/' memreserv4
 134             | memreserv2 '+' memreserv3
 135             | memreserv2 '+' memreserv4
 136             | memreserv2 '-' memreserv3
 137             | memreserv2 '-' memreserv4
 138             | memreserv2 '%' memreserv3
 139             | memreserv2 '%' memreserv4
 140             | memreserv2 POT memreserv3
 141             | memreserv2 POT memreserv4

 142  memreserv3 : intorreal
 143             | ID

 144  memreserv4 : '(' memreserv2 ')'

 145  print : print2 '!' NEWLINE
 146        | print2 PRINTLN NEWLINE

 147  print2 : STRING
 148         | print2 '+' ID
 149         | print2 '+' ID '(' listexp ')'
 150         | print2 '+' STRING
 151         | print2 '+' INT
 152         | STRING '*' print3
 153         | print2 '+' STRING '*' print3

 154  print3 : ID
 155         | intorreal
 156         | print3 '*' ID
 157         | print3 '*' intorreal

 158  intorreal : INT
 159            | REALN

state 0
	$accept : . pipoca $end  (0)
	file : .  (2)

	.  reduce 2

	pipoca  goto 1
	file  goto 2


state 1
	$accept : pipoca . $end  (0)

	$end  accept


state 2
	pipoca : file .  (1)
	file : file . decl  (3)

	REAL  shift 3
	INTEGER  shift 4
	INIT  shift 5
	EXTERN  shift 6
	NEWLINE  shift 7
	ID  shift 8
	$end  reduce 1

	decl  goto 9
	init  goto 10
	extern  goto 11
	func  goto 12


state 3
	func : REAL . ID '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (22)

	ID  shift 13
	.  error


state 4
	func : INTEGER . ID '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (23)

	ID  shift 14
	.  error


state 5
	init : INIT . ID OPATR init2 NEWLINE  (8)

	ID  shift 15
	.  error


state 6
	extern : EXTERN . extern2 NEWLINE  (14)

	ID  shift 16
	.  error

	extern2  goto 17


state 7
	decl : NEWLINE .  (7)

	.  reduce 7


state 8
	func : ID . '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (24)

	'('  shift 18
	.  error


state 9
	file : file decl .  (3)

	.  reduce 3


state 10
	decl : init .  (4)

	.  reduce 4


state 11
	decl : extern .  (5)

	.  reduce 5


state 12
	decl : func .  (6)

	.  reduce 6


state 13
	func : REAL ID . '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (22)

	'('  shift 19
	.  error


state 14
	func : INTEGER ID . '(' listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (23)

	'('  shift 20
	.  error


state 15
	init : INIT ID . OPATR init2 NEWLINE  (8)

	OPATR  shift 21
	.  error


state 16
	extern2 : ID .  (15)

	.  reduce 15


state 17
	extern : EXTERN extern2 . NEWLINE  (14)
	extern2 : extern2 . ',' ID  (16)

	NEWLINE  shift 22
	','  shift 23
	.  error


state 18
	func : ID '(' . listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (24)
	listexp3 : .  (25)

	NOT  shift 24
	PLUSONE  shift 25
	MINUSONE  shift 26
	ID  shift 27
	REALN  shift 28
	INT  shift 29
	'-'  shift 30
	'('  shift 31
	'@'  shift 32
	')'  reduce 25

	listexp3  goto 33
	listexp4  goto 34
	exp5  goto 35
	exp  goto 36
	exp2  goto 37
	exp3  goto 38
	intorreal  goto 39


state 19
	func : REAL ID '(' . listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (22)
	listexp3 : .  (25)

	NOT  shift 24
	PLUSONE  shift 25
	MINUSONE  shift 26
	ID  shift 27
	REALN  shift 28
	INT  shift 29
	'-'  shift 30
	'('  shift 31
	'@'  shift 32
	')'  reduce 25

	listexp3  goto 40
	listexp4  goto 34
	exp5  goto 35
	exp  goto 36
	exp2  goto 37
	exp3  goto 38
	intorreal  goto 39


state 20
	func : INTEGER ID '(' . listexp3 ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (23)
	listexp3 : .  (25)

	NOT  shift 24
	PLUSONE  shift 25
	MINUSONE  shift 26
	ID  shift 27
	REALN  shift 28
	INT  shift 29
	'-'  shift 30
	'('  shift 31
	'@'  shift 32
	')'  reduce 25

	listexp3  goto 41
	listexp4  goto 34
	exp5  goto 35
	exp  goto 36
	exp2  goto 37
	exp3  goto 38
	intorreal  goto 39


state 21
	init : INIT ID OPATR . init2 NEWLINE  (8)

	'['  shift 42
	.  error

	init2  goto 43


state 22
	extern : EXTERN extern2 NEWLINE .  (14)

	.  reduce 14


state 23
	extern2 : extern2 ',' . ID  (16)

	ID  shift 44
	.  error


state 24
	exp3 : NOT . ID  (124)

	ID  shift 45
	.  error


state 25
	exp3 : PLUSONE . ID  (119)

	ID  shift 46
	.  error


state 26
	exp3 : MINUSONE . ID  (120)

	ID  shift 47
	.  error


state 27
	listexp3 : ID . '[' ']'  (27)
	listexp4 : ID . '[' ']'  (31)
	exp : ID . '[' memreserv2 ']' OPATR exp3  (111)
	exp : ID . '[' memreserv2 ']' OPATR exp2  (112)
	exp3 : ID .  (115)
	exp3 : ID . '(' listexp ')'  (117)
	exp3 : ID . '[' memreserv2 ']'  (118)
	exp3 : ID . PLUSONE  (121)
	exp3 : ID . MINUSONE  (122)

	PLUSONE  shift 48
	MINUSONE  shift 49
	'['  shift 50
	'('  shift 51
	AND  reduce 115
	OR  reduce 115
	MOREOREQUAL  reduce 115
	LESSOREQUAL  reduce 115
	NOTEQUAL  reduce 115
	POT  reduce 115
	'-'  reduce 115
	','  reduce 115
	')'  reduce 115
	'+'  reduce 115
	'*'  reduce 115
	'/'  reduce 115
	'%'  reduce 115
	'<'  reduce 115
	'>'  reduce 115
	'='  reduce 115
	'?'  reduce 115


state 28
	intorreal : REALN .  (159)

	.  reduce 159


state 29
	intorreal : INT .  (158)

	.  reduce 158


state 30
	exp3 : '-' . ID  (125)
	exp3 : '-' . intorreal  (126)

	ID  shift 52
	REALN  shift 28
	INT  shift 29
	.  error

	intorreal  goto 53


state 31
	exp5 : '(' . exp5 AND exp ')'  (79)
	exp5 : '(' . exp5 OR exp ')'  (81)
	exp2 : '(' . exp ')'  (114)

	NOT  shift 24
	PLUSONE  shift 25
	MINUSONE  shift 26
	ID  shift 54
	REALN  shift 28
	INT  shift 29
	'-'  shift 30
	'('  shift 31
	'@'  shift 32
	.  error

	exp5  goto 55
	exp  goto 56
	exp2  goto 37
	exp3  goto 38
	intorreal  goto 39


state 32
	exp3 : '@' . ID  (116)

	ID  shift 57
	.  error


state 33
	func : ID '(' listexp3 . ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (24)

	')'  shift 58
	.  error


state 34
	listexp3 : listexp4 . ',' ID '[' ']'  (28)
	listexp3 : listexp4 . ',' exp  (29)
	listexp4 : listexp4 . ',' ID '[' ']'  (32)
	listexp4 : listexp4 . ',' exp  (33)

	','  shift 59
	.  error


state 35
	listexp3 : exp5 .  (26)
	listexp4 : exp5 .  (30)
	exp5 : exp5 . AND exp  (80)
	exp5 : exp5 . OR exp  (82)

	AND  shift 60
	OR  shift 61
	','  reduce 30
	')'  reduce 26


state 36
	exp5 : exp .  (78)
	exp : exp . '-' exp3  (87)
	exp : exp . '-' exp2  (88)
	exp : exp . '+' exp3  (89)
	exp : exp . '+' exp2  (90)
	exp : exp . '*' exp3  (91)
	exp : exp . '*' exp2  (92)
	exp : exp . '/' exp3  (93)
	exp : exp . '/' exp2  (94)
	exp : exp . '%' exp3  (95)
	exp : exp . '%' exp2  (96)
	exp : exp . POT exp3  (97)
	exp : exp . POT exp2  (98)
	exp : exp . '<' exp3  (99)
	exp : exp . '<' exp2  (100)
	exp : exp . '>' exp3  (101)
	exp : exp . '>' exp2  (102)
	exp : exp . '=' exp3  (103)
	exp : exp . '=' exp2  (104)
	exp : exp . MOREOREQUAL exp3  (105)
	exp : exp . MOREOREQUAL exp2  (106)
	exp : exp . LESSOREQUAL exp3  (107)
	exp : exp . LESSOREQUAL exp2  (108)
	exp : exp . NOTEQUAL exp3  (109)
	exp : exp . NOTEQUAL exp2  (110)
	exp : exp . '?'  (113)

	MOREOREQUAL  shift 62
	LESSOREQUAL  shift 63
	NOTEQUAL  shift 64
	POT  shift 65
	'-'  shift 66
	'+'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	'<'  shift 71
	'>'  shift 72
	'='  shift 73
	'?'  shift 74
	AND  reduce 78
	OR  reduce 78
	THEN  reduce 78
	ELSE  reduce 78
	DO  reduce 78
	DONE  reduce 78
	NEWLINE  reduce 78
	','  reduce 78
	')'  reduce 78


state 37
	exp : exp2 .  (85)

	.  reduce 85


state 38
	exp : exp3 .  (86)

	.  reduce 86


state 39
	exp3 : intorreal .  (123)

	.  reduce 123


state 40
	func : REAL ID '(' listexp3 . ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (22)

	')'  shift 75
	.  error


state 41
	func : INTEGER ID '(' listexp3 . ')' NEWLINE STARTBLOCK func2 ENDENDBLOCK NEWLINE  (23)

	')'  shift 76
	.  error


state 42
	init2 : '[' . init3 ']'  (9)

	REALN  shift 28
	INT  shift 29
	'-'  shift 77
	.  error

	init3  goto 78
	intorreal  goto 79


state 43
	init : INIT ID OPATR init2 . NEWLINE  (8)

	NEWLINE  shift 80
	.  error


state 44
	extern2 : extern2 ',' ID .  (16)

	.  reduce 16


state 45
	exp3 : NOT ID .  (124)

	.  reduce 124


state 46
	exp3 : PLUSONE ID .  (119)

	.  reduce 119


state 47
	exp3 : MINUSONE ID .  (120)

	.  reduce 120

